--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,10 @@
 
 <web-app>
     <display-name>Archetype Created Web Application</display-name>
+    <context-param>
+        <param-name>sessionLocale</param-name>
+        <param-value>ru</param-value>
+    </context-param>
     <servlet>
         <servlet-name>Controller</servlet-name>
         <servlet-class>kz.epam.davletalin.controller.Controller</servlet-class>
@@ -12,9 +16,25 @@
         <servlet-name>Controller</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.jpg</url-pattern>
+    </servlet-mapping><servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.ico</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>/jsp/main.jsp</welcome-file>
     </welcome-file-list>
+
     <error-page>
         <error-code>404</error-code>
         <location>/jsp/error/404.jsp</location>
