--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,13 +1,19 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE web-app PUBLIC
         "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
-<web-app>
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+		 http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
+         version="4.0">
     <display-name>Archetype Created Web Application</display-name>
     <context-param>
         <param-name>sessionLocale</param-name>
         <param-value>ru</param-value>
     </context-param>
+
     <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>kz.epam.davletalin.filter.EncodingFilter</filter-class>
@@ -21,8 +27,13 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <servlet>
+
         <servlet-name>Controller</servlet-name>
         <servlet-class>kz.epam.davletalin.controller.Controller</servlet-class>
+        <multipart-config>
+            <max-file-size>10485760</max-file-size>
+            <max-request-size>20971520</max-request-size>
+        </multipart-config>
     </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
@@ -35,7 +46,8 @@
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.jpg</url-pattern>
-    </servlet-mapping><servlet-mapping>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.png</url-pattern>
     </servlet-mapping>
@@ -50,4 +62,11 @@
         <error-code>404</error-code>
         <location>/jsp/error/404.jsp</location>
     </error-page>
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>jsp</web-resource-name>
+            <url-pattern>/jsp/*</url-pattern>
+        </web-resource-collection>
+    </security-constraint>
+
 </web-app>
